CHANGELOG for smartmontools

$Id: CHANGELOG,v 1.27 2002/10/29 14:19:10 ballen4705 Exp $

Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>

Home page of code is: http://smartmontools.sourceforge.net

This program is free software; you can redistribute it and/or modify it
under the terms of the GNU General Public License as published by the Free
Software Foundation; either version 2, or (at your option) any later
version.

You should have received a copy of the GNU General Public License (for
example COPYING); if not, write to the Free Software Foundation, Inc., 675
Mass Ave, Cambridge, MA 02139, USA.

This code was originally developed as a Senior Thesis by Michael Cornwell
at the Concurrent Systems Laboratory (now part of the Storage Systems
Research Center), Jack Baskin School of Engineering, University of
California, Santa Cruz. http://ssrc.soe.ucsc.edu/


NOTES FOR FUTURE RELEASES: see TODO file.


CURRENT RELEASE (see VERSION file in this directory):

smartmontools-5.0-19

    smartd: prints warning message when it gets SIGHUP, saying that it
    is NOT re-reading the config file.

    smartctl: updated man page to say self-test commands -O,x,X,s,S,A
    appear to be supported in the code.  [I can't test these,  can anyone
    report?]

smartmontools-5.0-18

    smartctl: smartctl would previously print the LBA of a self-test
    if it completed, and the LBA was not 0 or 0xff...f However
    according to the specs this is not correct.  According to the
    specs, if the self-test completed without error then LBA is
    undefined.  This version fixes that.  LBA value only printed if
    self-test encountered an error.

smartmontools-5.0-17

    smartd has changed significantly. This is the first CVS checkin of
    code that extends the options available for smartd.  The following
    options can be placed into the /etc/smartd.conf file, and control the
    behavior of smartd.
    Configuration file Directives (following device name):