@@ -15,7 +15,7 @@
 
 # Monitor SMART status, ATA Error Log, Self-test log, and track
 # changes in all attributes except for attribute 194
-/dev/hdb -c l L -t -I 194 /dev/hdc
+/dev/hdb -c l L -t -I 194 
 
 # A very silent check.  Only report SMART health status if it fails
 /dev/hdc -c
